# sudokuai

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/sudokuai/: MainActivity.kt
android/app/src/main/res/values/: ic_launcher_background.xml
lib/: main.dart  view_controller.dart
lib/grid/: sudoku_grid.dart
lib/view/: camera_view.dart  scanner_view.dart  sudoku_view.dart
sudoku_scanner/: .gitignore  .metadata  README.md  ffigen.yaml  pubspec.yaml  setup.sh
sudoku_scanner/android/: CMakeLists.txt  build.gradle  settings.gradle
sudoku_scanner/android/src/main/: AndroidManifest.xml
sudoku_scanner/dev/: CMakeLists.txt  dev.cpp
sudoku_scanner/dev/src/: CMakeLists.txt  main.cpp
sudoku_scanner/dev/test/: CMakeLists.txt  integration_test.cpp
sudoku_scanner/lib/: bounding_box.dart  native_functions.dart  sudoku_scanner.dart  sudoku_scanner_bindings.dart  sudoku_scanner_bindings_generated.dart
sudoku_scanner/lib/old/: sudoku_scanner.dart  sudoku_scanner_bindings_generated.dart
sudoku_scanner/linux/: CMakeLists.txt
sudoku_scanner/src/: CMakeLists.txt  sudoku_scanner.cpp  sudoku_scanner.h  sudoku_scanner.hpp
sudoku_scanner/src/detection/: grid_detector.cpp  grid_detector.hpp
sudoku_scanner/src/dictionary/: dictionary.hpp
sudoku_scanner/src/extraction/: grid_extractor.cpp  grid_extractor.hpp
sudoku_scanner/src/extraction/classification/: number_classifier.cpp  number_classifier.hpp
sudoku_scanner/src/extraction/structs/: cell.hpp  grid.hpp
sudoku_scanner/src/old/: sudoku_scanner.cpp  sudoku_scanner.hpp
sudoku_scanner/test/: CMakeLists.txt  integration_test.cpp
test/: widget_test.dart
